# oscar

./: README.md
doc/: index.md  simulation.md
oscar/oscar_bringup/: CMakeLists.txt  package.xml
oscar/oscar_bringup/launch/: robot.launch
oscar/oscar_control/: CMakeLists.txt  oscar_ackerman_controller_plugin.xml  package.xml  path_track_ethz_2.npz  path_track_ethz_3_1.npz  path_track_ethz_4.npz  path_track_ethz_5.npz
oscar/oscar_control/config/: christine_v0_control.yaml  control.yaml  rqt_multiplot_debug_io.xml  teleop.yaml
oscar/oscar_control/include/oscar_control/: christine_ackermann_controller.h  christine_hw.h  christine_hwi_msg.h  christine_remote_bbb.h  christine_remote_bbb_protocol.h  christine_serial_hwi.h  input_manager.h  oac_raw_odom_publisher.h  odometry.h  oscar_ackermann_controller.h  oscar_hardware_interface.h  publisher.h
oscar/oscar_control/launch/: control.launch  teleop.launch
oscar/oscar_control/msg/: msg_debug_io.msg
oscar/oscar_control/paths/: arc_01.npz  arc_02.npz  line_01.npz  line_02.npz  oval_01.npz
oscar/oscar_control/paths/enac_bench/: path_01.npz  path_02.npz  path_03.npz  path_04.npz  path_05.npz  path_06.npz  path_07.npz  path_08.npz  path_09.npz  path_10.npz  path_10_1.npz  path_10_2.npz  path_11.npz  path_11_1.npz  path_11_2.npz
oscar/oscar_control/scripts/: Makefile  calibrate_ackermann.py  christine_calib_odom.py  christine_hwi_ext.cpp  christine_hwi_ext.pyx  display_path.py  edit_path.py  merge_paths.py  path.py  pp_guidance_node.py  pure_pursuit.py  record_debug_io.py  record_motor_trajectory.py  record_path.py  robcape.pyx  setup_christine_hwi_ext.py  setup_robcape_ext.py  test_ann.py  test_ann_ctl.py  test_ann_first_order.py  test_ann_first_order_with_ref.py  test_ann_sec_order.py  test_ann_sec_order_bis.py  test_christine_hwi_ext.py  test_motor.py  test_path.py  utils.py
oscar/oscar_control/scripts/calibration/: calib.launch  calibrate_lvel.py  calibrate_steering.py
oscar/oscar_control/scripts/guidance/: __init__.py  path.py  path_factory.py
oscar/oscar_control/src/: christine_ackermann_controller.cpp  christine_bbb_plug.c  christine_bbb_plug.cpp  christine_hardware_interface.cpp  christine_hwi_msg.cpp  christine_odometry.cpp  christine_rc.c  christine_remote_bbb.cpp  christine_remote_bbb_protocol.cpp  christine_serial_hwi.cpp  christine_serial_port.c  christine_serial_port.cpp  input_manager.cpp  oac_raw_odom_publisher.cpp  odometry.cpp  oscar_ackermann_controller.cpp  oscar_hardware_interface.cpp  publisher.cpp
oscar/oscar_description/: CMakeLists.txt  package.xml
oscar/oscar_description/cfg/: christine_cam_road_front_extr.yaml
oscar/oscar_description/launch/: description.launch
oscar/oscar_description/urdf/: christine_v0.urdf.xacro  oscar.gazebo  oscar.urdf.xacro  oscar_defaults.urdf.xacro  oscar_v0.urdf.xacro  wheels.urdf.xacro
oscar/oscar_navigation/: CMakeLists.txt  package.xml
oscar/oscar_navigation/launch/: demo_pp_ethz_track.launch  demo_pure_pursuit.launch  enac_bench_demo_pure_pursuit.launch  enac_z_demo_pure_pursuit.launch  guidance_teb_tuto.launch  robot_localization_ekf.launch
oscar/oscar_navigation/params/: ekf.yaml
oscar/oscar_navigation/params/sbpl/: costmap_params.yaml  oscar.mprim  oscar_2.mprim  oscar_3.mprim
oscar/oscar_navigation/params/teb_tuto/: costmap_common_params.yaml  (+2 more)
oscar/oscar_navigation/plots/: controller1.xml
oscar_desktop/oscar_viz/: CMakeLists.txt  package.xml
oscar_desktop/oscar_viz/launch/: view_model.launch  view_robot.launch
oscar_desktop/oscar_viz/rviz/: model.rviz  navigation.rviz
oscar_simulator/oscar_gazebo/: CMakeLists.txt  oscar_hardware_interface_gazebo.xml  package.xml
oscar_simulator/oscar_gazebo/cfg/: gazebo_control.yaml  gazebo_ekf.yaml
oscar_simulator/oscar_gazebo/include/oscar_gazebo/: oscar_hardware_interface_gazebo.h
oscar_simulator/oscar_gazebo/launch/: demo_pure_pursuit.launch  empty_world.launch
oscar_simulator/oscar_gazebo/src/: oscar_hardware_interface_gazebo.cpp
oscar_simulator/oscar_gazebo/urdf/: oscar.gazebo.urdf.xacro
